[project]
name = "monitoring-status"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "zaki3mymy", email = "zaki.last@gmail.com" }
]
dependencies = [
    "pydantic>=2.5.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pytest-parallel>=0.1.1",
    "pytest-mock>=3.12.0",
    "httpretty>=1.1.4",
    "flake8>=5.0.4",
    "isort>=5.13.2",
    "black>=23.12.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/monitoring_status"]
